# clap-info

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: feature.yml  release.yml
include/clap-scanner/: scanner.h
libs/: CMakeLists.txt
src/: clap-info-host.cpp  clap-info-host.h  clap-val-host.cpp  clap-val-host.h  info-params.cpp  info-pathscan.cpp  info-ports.cpp  info.h  main.cpp  resolve_entrypoint.cpp  resolve_macosLocations.mm
src/clap-info/: clap-info-host.cpp  clap-info-host.h  info-other-extensions.cpp  info-params.cpp  info-ports.cpp  info.h  main.cpp  preset-discovery-client.cpp
src/clap-scanner/: resolve_entrypoint.cpp  resolve_macosLocations.mm  scanner.cpp
